<resources>
    <string name="app_name">Quan ly danh ba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="needs_permission">needs permission</string>
    <string name="needs_permissions">needs permissions</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="registerHere">Đăng kí tại đây.</string>
    <string name="change">sửa</string>
    <string name="hint_lname">Họ...</string>
    <string name="hint_fname">Tên...</string>
    <string name="hint_company">Công ty...</string>
    <string name="phone">điện thoại</string>
    <string name="number">số điện thoại...</string>
    <string name="address">địa chỉ</string>
    <string name="hint_address">địa chỉ nhà...</string>
    <string name="add_address">thêm địa chỉ nhà riêng</string>
    <string name="gmail">gmail</string>
    <string name="hint_gmail">tên gmail...</string>
    <string name="add_gmail">thêm gmail</string>
    <string name="facebook">facebook</string>
    <string name="hint_fb">tên facebook...</string>
    <string name="add_fb">thêm facebook</string>
    <string name="web">web</string>
    <string name="hint_url">đường dẫn url...</string>
    <string name="add_url">thêm url</string>
    <string name="block_call">Chặn cuộc gọi</string>
    <string name="active_call">Bỏ chặn cuộc gọi</string>
    <string name="block_sms">Chặn tin nhắn</string>
    <string name="active_sms">Bỏ chặn tin nhắn</string>
    <string name="delete_num">Xóa liên hệ</string>
    <string name="hint_conf_pass">Nhập lại mật khẩu</string>
    <string name="signup">Đăng kí</string>
    <string name="have_acc">Đã có tài khoản</string>
    <string name="call">Gọi</string>
    <string name="sms">Nhắn tin</string>
    <string name="hint_name">Tên</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_birth">Birthday</string>
    <string name="hint_work">Work</string>
    <string name="hint_rela">Relationship</string>
    <string name="change_lang">Change language</string>
    <string name="fix_info">Sửa thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="help">Giúp đỡ</string>
    <string name="lang_dialog">Chọn ngôn ngữ</string>
    <string name="err_null">Tên hoặc số điện thoại trống</string>
    <string name="saved">Đã lưu</string>
    <string name="blocked">Chặn thành công</string>
    <string name="cancel_block">Đã hủy chặn</string>
    <string name="enter_num">Nhập số điện thoại</string>
    <string name="err_null_1">Các trường không được trống</string>
    <string name="done">Hoàn thành:</string>
    <string name="err">Lỗi!!:</string>
    <string name="detail_sms">Tin nhắn</string>
    <string name="confirm_pass">Mật khẩu không khớp</string>
    <string name="register_succ">Đăng kí thành công</string>
    <string name="saved_1">Saved</string>
    <string name="hint_fname_1">First name</string>
    <string name="hint_lname_1">Last name</string>
    <string name="light_mode">Light mode</string>
    <string name="delete_succ">Xóa thành công</string>
</resources>
