<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_back"
    android:padding="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="60dp"
                android:layout_height="150dp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/img_contact"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_insert_emoticon" />

                <TextView
                    android:background="@drawable/ripple_1"
                    android:id="@+id/change_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textColor="?attr/ic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="30dp">
                <EditText
                    android:id="@+id/lname_contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_lname"
                    android:textColor="?attr/ic"
                    android:textColorHint="?attr/hint_color"
                    android:background="@drawable/border_bottom"
                    />

                <EditText
                    android:id="@+id/name_contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_fname"
                    android:textColor="?attr/ic"
                    android:textColorHint="?attr/hint_color"
                    android:background="@drawable/border_bottom"/>

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_company"
                    android:textColor="?attr/ic"
                    android:textColorHint="?attr/hint_color"
                    android:background="@drawable/border_bottom"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom">
            <TextView
                android:id="@+id/clear_phone"
                android:textSize="7.5pt"
                android:drawableLeft="@drawable/ic_remove_circle_red"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/phone"
                android:textColor="?attr/ic"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:background="@drawable/border_right"
                />

            <EditText
                android:id="@+id/phone_contact"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/number"
                android:inputType="number"
                android:textColor="?attr/ic"
                android:textColorHint="@color/colorHint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom"
            android:visibility="gone">
            <TextView
                android:id="@+id/remove_home_address"
                android:textSize="7.5pt"
                android:drawableLeft="@drawable/ic_remove_circle_red"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/address"
                android:textColor="?attr/ic"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:background="@drawable/border_right"
                />

            <EditText
                android:id="@+id/home_address"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/hint_address"
                android:textColor="?attr/ic"
                android:textColorHint="?attr/hint_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_address"
            android:textSize="7.5pt"
            android:drawableLeft="@drawable/ic_add_circle_green"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:text="@string/add_address"
            android:textColor="?attr/ic"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_bottom" />

        <LinearLayout
            android:id="@+id/container_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom"
            android:visibility="gone">
            <TextView
                android:id="@+id/remove_gmail"
                android:textSize="7.5pt"
                android:drawableLeft="@drawable/ic_remove_circle_red"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/gmail"
                android:textColor="?attr/ic"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:background="@drawable/border_right"
                />

            <EditText
                android:id="@+id/gmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/hint_gmail"
                android:textColor="?attr/ic"
                android:textColorHint="?attr/hint_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_gmail"
            android:textSize="7.5pt"
            android:drawableLeft="@drawable/ic_add_circle_green"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:text="@string/add_gmail"
            android:textColor="?attr/ic"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_bottom" />

        <LinearLayout
            android:id="@+id/container_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom"
            android:visibility="gone">
            <TextView
                android:id="@+id/remove_fb"
                android:textSize="7.5pt"
                android:drawableLeft="@drawable/ic_remove_circle_red"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textColor="?attr/ic"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:background="@drawable/border_right"
                />

            <EditText
                android:id="@+id/fb_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/hint_fb"
                android:textColor="?attr/ic"
                android:textColorHint="?attr/hint_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_fb"
            android:textSize="7.5pt"
            android:drawableLeft="@drawable/ic_add_circle_green"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:text="@string/add_fb"
            android:textColor="?attr/ic"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_bottom" />

        <LinearLayout
            android:id="@+id/container_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom"
            android:visibility="gone">
            <TextView
                android:id="@+id/remove_url"
                android:textSize="7.5pt"
                android:drawableLeft="@drawable/ic_remove_circle_red"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/web"
                android:textColor="?attr/ic"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:background="@drawable/border_right"
                />

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/hint_url"
                android:textColor="?attr/ic"
                android:textColorHint="?attr/hint_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_url"
            android:textSize="7.5pt"
            android:drawableLeft="@drawable/ic_add_circle_green"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:text="@string/add_url"
            android:textColor="?attr/ic"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_bottom" />

        <TextView
            android:id="@+id/block_call"
            android:gravity="center"
            android:textSize="9.5pt"
            android:paddingTop="15dp"
            android:text="@string/block_call"
            android:textColor="?attr/accent"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/active_call"
            android:gravity="center"
            android:textSize="9.5pt"
            android:paddingTop="15dp"
            android:text="@string/active_call"
            android:textColor="?attr/accent"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/block_sms"
            android:gravity="center"
            android:textSize="9.5pt"
            android:text="@string/block_sms"
            android:textColor="?attr/accent"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/active_sms"
            android:gravity="center"
            android:textSize="9.5pt"
            android:text="@string/active_sms"
            android:textColor="?attr/accent"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/delete_contact"
            android:gravity="center"
            android:textSize="10pt"
            android:text="@string/delete_num"
            android:textColor="?attr/ic_red"
            android:layout_width="match_parent"
            android:layout_height="55dp" />
    </LinearLayout>

</ScrollView>